--- a/playbook10.yml
+++ b/playbook10.yml
@@ -11,4 +11,8 @@
    - name: stop a httpd container
      docker_container:
       name: appserver
-      state: absent      
+      state: stopped 
+   - name: remove a httpd container
+     docker_container:
+       name: appserver
+       state: absent         
